basic 2d canvas game boilerplate, will be upgraded to 3d in next commit

--- a/index.html
+++ b/index.html
@@ -3,12 +3,16 @@
     <head>
       <title>BB10 Game</title>
       <link rel='stylesheet' href='./style/style.css'>
-      <h1>Blackberry showcase game</h1>
+      <script src='./libs/jquery.min.js'></script>
+      <script src='./libs/requestAnimationFrame.js'></script>
+      <h1>BB10</h1>
     </head>
-    <body>
+    <body onload='main()'>
       <canvas id='gameCanvas'>Needs HTML5 browser.</canvas>
       <p>Latest debug log:</p>
       <p>First commit!</p>
     </body>
+    <script src='./js/game.js'></script>
+    <script src='./js/main.js'></script>
   </html>
 </html>
