--- a/index.html
+++ b/index.html
@@ -4,35 +4,21 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="viewport" content="width=640" />
+    <link rel="stylesheet" href="style/style.css"/>
+    <title>SUPER CRATE BOX FPS by nklsrh</title>
 
-    <link rel="stylesheet" href="stylesheets/core.css" media="screen"/>
-
-    <script type="text/javascript" src="javascripts/extras/modernizr.js"></script>
     <script type="text/javascript" src="javascripts/extras/Three.js"></script>
     <script type="text/javascript" src="javascripts/extras/ColladaLoader.js"></script>
-    <script type="text/javascript" src="javascripts/extras/OBJLoader.js"></script>
     <script type="text/javascript" src="javascripts/extras/jquery.min.js"></script>
-    <script type="text/javascript" src="javascripts/extras/rightClick.js"></script>
     <script type="text/javascript" src="javascripts/extras/requestAnimationFrame.js"></script>
-    <script type="text/javascript" src="javascripts/extras/gamequery-0.5.1.js"></script>
-    <script type="text/javascript" src="javascripts/extras/headsmart.min.js"></script>
-    <title>SUPER CRATE BOX FPS by nklsrh</title>
     <script type="text/javascript" src="javascripts/game/mouse.js"></script>
-    <script type="text/javascript" src="javascripts/game/keyboard.js"></script>
     <script type="text/javascript" src="models/threeDee.js"></script>
     <script type="text/javascript" src="javascripts/game/game.js"></script>
     <script type="text/javascript" src="javascripts/game/main.js"></script>
   </head>
 
   <body onload='main();'>
-    <!--<a id="forkme_banner" href="https://github.com/nklsrh/SUPER-CRATE-BOX-FPS">Fork on GitHub</a>-->
-    <div class="shell">
-      <header>
-            <h1>SUPER CRATE BOX FPS</h1>
-            <h2>A different interpretation of the awesome Vlambeer game.</h2>
-      </header>
-      <div id='gameCanvas'></div>
-	  <p id='devlog'>Added PointLight so COLLADA loads well and displays correctly, thanks to Mr.doob!</p>
-    </div>	
+    <h1>UNCHARTED + HALF LIFE + TEMPLE RUN</h1>
+    <div id='gameCanvas'></div>
   </body>
 </html>
