Changed name to 'Uncharted Life Run' coz it's funny.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="viewport" content="width=640" />
     <link rel="stylesheet" href="style/style.css"/>
-    <title>SUPER CRATE BOX FPS by nklsrh</title>
+    <title>Uncharted Life Run by nklsrh</title>
 
     <script type="text/javascript" src="javascripts/extras/Three.js"></script>
     <script type="text/javascript" src="javascripts/extras/ColladaLoader.js"></script>
