widened the city, added player class and now ready to interface gameplay with graphics

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <script type="text/javascript" src="javascripts/game/threeDee.js"></script>
     <script type="text/javascript" src="javascripts/game/game.js"></script>
     <script type="text/javascript" src="javascripts/game/main.js"></script>
+    
+    <script type="text/javascript" src="javascripts/game/player.js"></script>
   </head>
 
   <body onload='main();'>
