cleaned up repo, created new ThreeD class for awesome ingame 3d integration, unlike blastr arena's dodgy separate 3d engine class.

--- a/index.html
+++ b/index.html
@@ -2,25 +2,23 @@
 <html>
   <head>
     <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="viewport" content="width=640" />
     <link rel="stylesheet" href="style/style.css"/>
-    <title>Uncharted Life Run by nklsrh</title>
+    <title>BLASTR:ARENA</title>
 
     <script type="text/javascript" src="javascripts/extras/Three.js"></script>
     <script type="text/javascript" src="javascripts/extras/ColladaLoader.js"></script>
     <script type="text/javascript" src="javascripts/extras/jquery.min.js"></script>
     <script type="text/javascript" src="javascripts/extras/requestAnimationFrame.js"></script>
     <script type="text/javascript" src="javascripts/game/mouse.js"></script>
-    <script type="text/javascript" src="javascripts/game/threeDee.js"></script>
+    <script type="text/javascript" src="javascripts/game/threeD.js"></script>
     <script type="text/javascript" src="javascripts/game/game.js"></script>
     <script type="text/javascript" src="javascripts/game/main.js"></script>
     
     <script type="text/javascript" src="javascripts/game/player.js"></script>
+    <script type="text/javascript" src="javascripts/game/environment.js"></script>
   </head>
 
   <body onload='main();'>
-    <h1>UNCHARTED + HALF LIFE + TEMPLE RUN</h1>
     <div id='gameCanvas'></div>
   </body>
 </html>
