--- a/index.html
+++ b/index.html
@@ -11,11 +11,14 @@
     <script type="text/javascript" src="javascripts/extras/requestAnimationFrame.js"></script>
     <script type="text/javascript" src="javascripts/game/mouse.js"></script>
     <script type="text/javascript" src="javascripts/game/threeD.js"></script>
+    <script type="text/javascript" src="javascripts/game/assets.js"></script>
     <script type="text/javascript" src="javascripts/game/game.js"></script>
     <script type="text/javascript" src="javascripts/game/main.js"></script>
     
+    <script type="text/javascript" src="javascripts/game/GlaDOS.js"></script>
     <script type="text/javascript" src="javascripts/game/player.js"></script>
     <script type="text/javascript" src="javascripts/game/environment.js"></script>
+    <script type="text/javascript" src="javascripts/game/tile.js"></script>
   </head>
 
   <body onload='main();'>
