added config.xml for BB deployment needs, testing perf with 1 cube

--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset='utf-8'>
     <link rel="stylesheet" href="style/style.css"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width,height=device-height,user-scalable=no,initial-scale=1.0">
+    
     <title>BLASTR:ARENA</title>
 
     <script type="text/javascript" src="javascripts/extras/Three.js"></script>
