--- a/index.html
+++ b/index.html
@@ -6,24 +6,23 @@
     <meta name="viewport" content="width=device-width,height=device-height,user-scalable=no,initial-scale=1.0">
     
     <title>BLASTR:ARENA</title>
-
-    <script type="text/javascript" src="javascripts/extras/Three.js"></script>
-    <script type="text/javascript" src="javascripts/extras/ColladaLoader.js"></script>
-    <script type="text/javascript" src="javascripts/extras/jquery.min.js"></script>
-    <script type="text/javascript" src="javascripts/extras/requestAnimationFrame.js"></script>
-    <script type="text/javascript" src="javascripts/game/mouse.js"></script>
-    <script type="text/javascript" src="javascripts/game/threeD.js"></script>
-    <script type="text/javascript" src="javascripts/game/game.js"></script>
-    <script type="text/javascript" src="javascripts/game/main.js"></script>
-    <script type="text/javascript" src="javascripts/game/assets.js"></script>
-    
-    <script type="text/javascript" src="javascripts/game/GlaDOS.js"></script>
-    <script type="text/javascript" src="javascripts/game/player.js"></script>
-    <script type="text/javascript" src="javascripts/game/environment.js"></script>
-    <script type="text/javascript" src="javascripts/game/tile.js"></script>
   </head>
 
   <body onload='main();'>
-    <div id='gameCanvas'></div>
+    <canvas id='canvas3D'></canvas>
   </body>
+  
+  <script type="text/javascript" src="javascripts/extras/Three.js"></script>  
+  <script type="text/javascript" src="glge/glge-compiled.js"></script>
+  <script type="text/javascript" src="glge/threeDee.js"></script>
+  <script type="text/javascript" src="javascripts/extras/jquery.min.js"></script>
+  <script type="text/javascript" src="javascripts/extras/requestAnimationFrame.js"></script>
+  <script type="text/javascript" src="javascripts/game/mouse.js"></script>
+  <script type="text/javascript" src="javascripts/game/game.js"></script>
+  <script type="text/javascript" src="javascripts/game/main.js"></script>
+
+  <script type="text/javascript" src="javascripts/game/GlaDOS.js"></script>
+  <script type="text/javascript" src="javascripts/game/player.js"></script>
+  <script type="text/javascript" src="javascripts/game/environment.js"></script>
+  <script type="text/javascript" src="javascripts/game/tile.js"></script>
 </html>
