random confusion, GLGE doesnt work on PlayBook. reverting back to THREE

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <canvas id='canvas3D'></canvas>
   </body>
   
+  <script type="text/javascript" src="javascripts/game/main.js"></script>
   <script type="text/javascript" src="javascripts/extras/Three.js"></script>  
-  <script type="text/javascript" src="glge/glge-compiled.js"></script>
-  <script type="text/javascript" src="glge/threeDee.js"></script>
+  <script type="text/javascript" src="javascripts/extras/ColladaLoader.js"></script>  
+  <script type="text/javascript" src="javascripts/game/threeD.js"></script>
   <script type="text/javascript" src="javascripts/extras/jquery.min.js"></script>
   <script type="text/javascript" src="javascripts/extras/requestAnimationFrame.js"></script>
   <script type="text/javascript" src="javascripts/game/mouse.js"></script>
   <script type="text/javascript" src="javascripts/game/game.js"></script>
-  <script type="text/javascript" src="javascripts/game/main.js"></script>
 
   <script type="text/javascript" src="javascripts/game/GlaDOS.js"></script>
   <script type="text/javascript" src="javascripts/game/player.js"></script>
