loads more A.I. movement bugfixes. They seem to work like the XNA version now.
Implemented Blasts, they do NOT work

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <script type="text/javascript" src="javascripts/game/tile.js"></script>
     <script type="text/javascript" src="javascripts/game/GlaDOS.js"></script>
     <script type="text/javascript" src="javascripts/game/player.js"></script>
+    <script type="text/javascript" src="javascripts/game/blast.js"></script>
   </head>
 
   <body onload='main();'>
