NEW input.js class, KEYBOARD support with WASD

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <script type="text/javascript" src="javascripts/extras/ColladaLoader.js"></script>
     <script type="text/javascript" src="javascripts/extras/jquery.min.js"></script>
     <script type="text/javascript" src="javascripts/extras/requestAnimationFrame.js"></script>
+    <script type="text/javascript" src="javascripts/game/keyboard.js"></script>    
     <script type="text/javascript" src="javascripts/game/mouse.js"></script>
+    <script type="text/javascript" src="javascripts/game/input.js"></script>
     <script type="text/javascript" src="javascripts/game/threeD.js"></script>
     <script type="text/javascript" src="javascripts/game/assets.js"></script>
     <script type="text/javascript" src="javascripts/game/game.js"></script>
