added Lights class and new background CANVAS. Blast system is cleaner and works better, but still really broken.

--- a/index.html
+++ b/index.html
@@ -26,9 +26,12 @@
     <script type="text/javascript" src="javascripts/game/GlaDOS.js"></script>
     <script type="text/javascript" src="javascripts/game/player.js"></script>
     <script type="text/javascript" src="javascripts/game/blast.js"></script>
+    
+    <script type="text/javascript" src="javascripts/game/lights.js"></script>
   </head>
 
   <body onload='main();'>
+    <canvas id='backgroundCanvas'></canvas>
     <div id='gameCanvas'></div>
   </body>
 </html>
