FIRST DAY AFTER EXAMS BONANZA COMMIT
moved device checker to device.js, added camera.js and a new canvas to
draw to, which draws from the original gameCanvas. Awesome new Hydrogen
Labs bot in Inkscape, needs work for in-game sharpness. RETINA, people!

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
   <script type="text/javascript" src="javascripts/extras/Three.js"></script>
   <script type="text/javascript" src="javascripts/extras/jquery.min.js"></script>
   <script type="text/javascript" src="javascripts/extras/requestAnimationFrame.js"></script>
-  <script type="text/javascript" src="javascripts/extras/stats.js"></script>
+  <script type="text/javascript" src="javascripts/extras/stats.js"></script>  
+  <script type="text/javascript" src="javascripts/game/device.js"></script>
   
   <script type="text/javascript" src="javascripts/game/main.js"></script>
   
