--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <canvas id='gameCanvas'></canvas>
   </body>
   
+  <script type="text/javascript" src="javascripts/extras/webgl-2d.js"></script>  
   <script type="text/javascript" src="javascripts/extras/Three.js"></script>
   <script type="text/javascript" src="javascripts/extras/jquery.min.js"></script>
   <script type="text/javascript" src="javascripts/extras/requestAnimationFrame.js"></script>
