--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
 
   <body onload='main();'>
-    <canvas id='backgroundCanvas'></canvas>
+    <canvas id='cameraCanvas'></canvas>
     <canvas id='gameCanvas'></canvas>
   </body>
   
